fixed burger menu not showing

--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,9 @@
       margin-right: 1.5rem;
       /* visibility: visible; */
    }
+   .burger-menu {
+      display: block;
+   }
    .logo {
       width: 100%;
       height: 100%;
